--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,7 @@ basepython = python3.11
 deps = -r{toxinidir}/requirements_dev.txt
 commands = mypy src
 
+; [testenv:flake8]
+; basepython = python3.11
+; deps = flake8>=3.9
+; commands = flake8 src tests
