--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 minversion = 3.8.0
-envlist =  flake8, mypy, py311
+envlist =  mypy, py311
 isolated_build = True
 
 [gh-actions]
 python = 
-    3.11: py311, flake8, mypy
+    3.11: py311, mypy
 
 
 
