--- a/setup.cfg
+++ b/setup.cfg
@@ -8,10 +8,6 @@ classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Developers
     Operating System :: OS Independent
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Topic :: Software Development :: Libraries :: Python Modules
     Topic :: Utilities
 
 [options]
@@ -22,6 +18,11 @@ package_dir =
     = src
 zip_safe = False
 include_package_data = True
+install_requires = 
+    pandas >= 1.0.0
+    pydantic >= 1.8.0
+    
+
 
 
 [options.packages.find]
