--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-openai==0.27.8
-pandas==1.4.4
-pandasql==0.7.3
-python-dotenv==1.0.1
-streamlit==1.28.2
+# openai==0.27.8
+# pandas==2.2.0
+# pandasql==0.7.3
+# python-dotenv==1.0.1
+# streamlit==1.28.2
