--- a/tox.ini
+++ b/tox.ini
@@ -15,14 +15,14 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
 commands = 
-    pytest --basetemp={envtmpdir}
+    pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
 
-[testenv:mypy]
-basepython = python3.11
-deps = -r{toxinidir}/requirements_dev.txt
-commands = mypy src
+; [testenv:mypy]
+; basepython = python3.11
+; deps = -r{toxinidir}/requirements_dev.txt
+; commands = mypy src
 
 ; [testenv:flake8]
 ; basepython = python3.11
