--- a/tox.ini
+++ b/tox.ini
@@ -19,10 +19,10 @@ commands =
 allowlist_externals = pytest
 
 
-; [testenv:mypy]
-; basepython = python3.11
-; deps = -r{toxinidir}/requirements_dev.txt
-; commands = mypy src
+[testenv:mypy]
+basepython = python3.11
+deps = -r{toxinidir}/requirements_dev.txt
+commands = mypy src
 
 ; [testenv:flake8]
 ; basepython = python3.11
