--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
 commands = 
+    pytest --version
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
