--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
 
+          python -m pip install pytest
+          python -m pip install pytest-cov
           pip install tox tox-gh-actions
 
       - name: Run tests with tox
