--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,9 @@ classifiers =
     Topic :: Utilities
 
 [options]
-packages = find:
+packages = 
+    backend
+    frontend
 
 python_requires = >=3.8
 package_dir = 
@@ -23,8 +25,6 @@ include_package_data = True
 
 
 
-[options.packages.find]
-where=src
 
 [options.extras_require]
 testing = 
