--- a/setup.cfg
+++ b/setup.cfg
@@ -12,12 +12,10 @@ classifiers =
 
 [options]
 packages = 
-    backend
-    frontend
+    src
+
 
 python_requires = >=3.8
-package_dir = 
-    = src
 zip_safe = False
 include_package_data = True
 
