--- a/setup.cfg
+++ b/setup.cfg
@@ -11,15 +11,16 @@ classifiers =
     Topic :: Utilities
 
 [options]
-packages = 
-    src
-
 
 python_requires = >=3.8
 zip_safe = False
 include_package_data = True
+packages = find:
+package_dir = 
+    =src
 
-    
+[options.packages.find]
+where = src 
 
 
 
