--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,8 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements.txt
-commands = 
+commands =
+    pip install openai==0.27.8
     pytest --version
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
