--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
 commands =
+    pip uninstall openai
+    pip3 install -r {toxinidir}/requirements.txt
     pytest --version
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
