--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
 commands =
-    pip uninstall openai
+    pip uninstall -y openai
     pip3 install -r {toxinidir}/requirements.txt
     pytest --version
     pytest -v --basetemp={envtmpdir}
