--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,8 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pip uninstall -y openai
-    pip3 install -r {toxinidir}/requirements.txt
+    pip install --upgrade pip
+    pip install openai
     pytest --version
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
