--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pytest --version
+    python -u {toxinidir}/tests/dummy_test.py
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
