--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pytest --version
-    pytest -v --basetemp={envtmpdir}
+    pytest -v --basetemp={toxinidir}
 allowlist_externals = pytest
 
 
