--- a/tox.ini
+++ b/tox.ini
@@ -7,16 +7,16 @@ isolated_build = True
 python = 
     3.9: py39, mypy
 
-
-
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements.txt
 commands =
+    python -m pip list
+    cat {toxinidir}/requirements.txt
     pytest --version
-    pytest -v --basetemp={toxinidir}
+    pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
 
