--- a/tox.ini
+++ b/tox.ini
@@ -13,10 +13,9 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
 commands =
-    python -m pip list
-    cat {toxinidir}/requirements.txt
-    pytest --version
-    pytest -v --basetemp={envtmpdir}
+    {envpython} -m pip list
+    {envpython} -m pytest --version
+    {envpython} -m pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
 
