--- a/tox.ini
+++ b/tox.ini
@@ -9,13 +9,13 @@ python =
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}
+    PYTHONPATH = {envsitepackagesdir}:{toxinidir}
 deps =
     -r{toxinidir}/requirements.txt
 commands =
-    {envpython} -m pip list
-    {envpython} -m pytest --version
-    {envpython} -m pytest -v --basetemp={envtmpdir}
+    python -m pip list
+    pytest --version
+    pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
 
