--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,9 @@ allowlist_externals = pytest
 [testenv:mypy]
 basepython = python3.9
 deps = -r{toxinidir}/requirements_dev.txt
-commands = mypy src
+commands =
+    mypy --install-types
+    mypy src
 
 ; [testenv:flake8]
 ; basepython = python3.9
