--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
-#addopts = "--cov=src"
+addopts = "--cov=src"
 testpaths = ["tests"]
 
 [tool.mypy]
