added env to tox

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {envsitepackagesdir}:{toxinidir}
+    OPENAI_API_KEY=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
 deps =
     -r{toxinidir}/requirements.txt
 commands =
