--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.db filter=lfs diff=lfs merge=lfs -text
 *.sqlite filter=lfs diff=lfs merge=lfs -text
 *.sqlite3 filter=lfs diff=lfs merge=lfs -text
+databases/crm1 filter=lfs diff=lfs merge=lfs -text
