--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,7 @@ jobs:
           lfs: true # Ensure Git LFS objects are checked out
 
       - name: Cache LFS objects
+        id: cache-lfs
         uses: actions/cache@v2
         with:
           path: |
