--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,6 +35,19 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Cache requirements
+        id: cache-requirements
+        uses: actions/cache@v2
+        with:
+          path: |
+            .tox/**/lib/python*/site-packages
+            requirements.txt
+          key: ${{ runner.os }}-${{ hashFiles('**/*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
+
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
