--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     if: >
       github.event_name == 'pull_request' || 
       (github.event_name == 'push' && 
-      !contains(github.event.head_commit.message, 'CACHE UPDATE'))
+      contains(github.event.head_commit.message, 'CACHE UPDATE'))
 
     strategy:
       matrix:
