--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   tests:
-    runs-on: ${{ matrix.os }}
+#    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     if: >
       github.event_name == 'pull_request' || 
       (github.event_name == 'push' && 
@@ -16,7 +17,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest]
+#        os: [macos-latest]
+        os: [windows-latest]
         python-version: [3.9]
 
     steps:
