--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,11 +43,10 @@ jobs:
       - name: Add Python to PATH
         run: |
           $pythonPath = "C:\actions-runner\_work\_tool\Python\3.9.13" # Update this path
-          echo "##vso[task.prependpath]$pythonPath"
 
       - name: Check Python and PATH
         run: |
-          Get-Command python
+          C:\Path\To\Python\python.exe --version
           echo $Env:PATH
 #      - name: Set up Python ${{ matrix.python-version }}
 #        uses: actions/setup-python@v4
