--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,10 +44,10 @@ jobs:
         run: |
           $pythonPath = "C:\actions-runner\_work\_tool\Python\3.9.13\x64" # Update this path
 
-      - name: Check Python and PATH
-        run: |
-          C:\actions-runner\_work\_tool\Python\3.9.13\x64\python-3.9.13-amd64.exe --version
-          echo $Env:PATH
+#      - name: Check Python and PATH
+#        run: |
+#          C:\actions-runner\_work\_tool\Python\3.9.13\x64\python-3.9.13-amd64.exe --version
+#          echo $Env:PATH
 #      - name: Set up Python ${{ matrix.python-version }}
 #        uses: actions/setup-python@v4
 #        with:
@@ -67,9 +67,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install pytest
-          python -m pip install pytest-cov
+          C:\actions-runner\_work\_tool\Python\3.9.13\x64\python-3.9.13-amd64.exe -m pip install --upgrade pip
+          C:\actions-runner\_work\_tool\Python\3.9.13\x64\python-3.9.13-amd64.exe -m pip install pytest
+          C:\actions-runner\_work\_tool\Python\3.9.13\x64\python-3.9.13-amd64.exe -m pip install pytest-cov
           pip install tox tox-gh-actions
 
       - name: Run tests with tox
