--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,9 @@ jobs:
   tests:
 #    runs-on: ${{ matrix.os }}
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: powershell
     if: >
       github.event_name == 'pull_request' || 
       (github.event_name == 'push' && 
