--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,9 +53,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          C:\actions-runner\_work\_tool\Python\3.9.13\x64\python-3.9.13-amd64.exe -m C:\Users\leota\anaconda3\lib\site-packages\pip install --upgrade pip
-          C:\actions-runner\_work\_tool\Python\3.9.13\x64\python-3.9.13-amd64.exe -m C:\Users\leota\anaconda3\lib\site-packages\pip install pytest
-          C:\actions-runner\_work\_tool\Python\3.9.13\x64\python-3.9.13-amd64.exe -m C:\Users\leota\anaconda3\lib\site-packages\pip install pytest-cov
+          C:\Users\leota\anaconda3\lib\site-packages\pip install --upgrade pip
+          C:\Users\leota\anaconda3\lib\site-packages\pip install pytest
+          C:\Users\leota\anaconda3\lib\site-packages\pip install pytest-cov
           C:\Users\leota\anaconda3\lib\site-packages\pip install tox tox-gh-actions
 
       - name: Run tests with tox
