--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ allowlist_externals = pytest
 basepython = python3.9
 deps = -r{toxinidir}/requirements_dev.txt
 commands =
-    mypy src
+;    mypy src
 
 ; [testenv:flake8]
 ; basepython = python3.9
