--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 minversion = 3.8.0
-envlist =  mypy, py39
+envlist =  mypy, py38
 isolated_build = True
 
 [gh-actions]
 python = 
-    3.9: py39, mypy
+    3.8: py38, mypy
 
 [testenv]
 setenv =
@@ -18,10 +18,10 @@ commands =
 allowlist_externals = pytest
 
 
-[testenv:mypy]
-basepython = python3.9
-deps = -r{toxinidir}/requirements_dev.txt
-commands =
+;[testenv:mypy]
+;basepython = python3.9
+;deps = -r{toxinidir}/requirements_dev.txt
+;commands =
 ;    mypy src
 
 ; [testenv:flake8]
