--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,9 +58,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install pytest
-          python -m pip install pytest-cov
+          pip install --upgrade pip
+          pip install pytest
+          pip install pytest-cov
           pip install tox tox-gh-actions
 
       - name: Run tests with tox
