--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ python =
 
 [testenv]
 setenv =
-    PYTHONPATH = {envsitepackagesdir}:{toxinidir}
+    PYTHONPATH = C:\actions-runner\_work\_tool\Python\3.9.13\x64
 deps =
     -r{toxinidir}/requirements.txt
 commands =
