--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,11 @@ python =
 
 [testenv]
 setenv =
-    PYTHONPATH = C:\actions-runner\_work\_tool\Python\3.9.13\x64
+    PYTHONPATH = {envsitepackagesdir}:{toxinidir}
 deps =
     -r{toxinidir}/requirements.txt
+    pandasql
+    sqlvalidator
 commands =
     pytest --version
     pytest -v --basetemp={envtmpdir}
