--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pytest --version
+    python -m pip install pandasql sqlvalidator
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
