--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pytest --version
-    python -m pip install pandasql sqlvalidator
+    python -m pip list
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
