--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ python =
     3.9: py39, mypy
 
 [testenv]
+basepython = C:\actions-runner\_work\_tool\Python\3.9.13\x64\python.exe
 setenv =
     PYTHONPATH = {envsitepackagesdir}:{toxinidir}
 deps =
