Local testing final - return of mypy src

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
 commands =
-    pytest --version
-    python -m pip list
+;    pytest --version
+;    python -m pip list
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
