--- a/tox.ini
+++ b/tox.ini
@@ -20,8 +20,8 @@ allowlist_externals = pytest
 
 
 [testenv:mypy]
-basepython = python3.9
-deps = -r{toxinidir}/requirements_dev.txt
+;basepython = python3.9
+;deps = -r{toxinidir}/requirements_dev.txt
 commands =
     mypy src
 
