Local testing final - last commit

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 minversion = 3.8.0
-envlist =  mypy, py39
+envlist =  py39
 isolated_build = True
 
 [gh-actions]
 python = 
-    3.9: py39, mypy
+    3.9: py39
 
 [testenv]
 setenv =
@@ -15,15 +15,9 @@ deps =
 commands =
 ;    pytest --version
 ;    python -m pip list
+    mypy src
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
-
-
-[testenv:mypy]
-;basepython = python3.9
-;deps = -r{toxinidir}/requirements_dev.txt
-commands =
-    mypy src
 
 ; [testenv:flake8]
 ; basepython = python3.9
