--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ pandasql==0.7.3
 python-dotenv==1.0.1
 streamlit==1.30.0
 sqlvalidator==0.0.20
+
+
+flake8==3.9.2
+tox==3.23.1
+pytest==6.2.4
+pytest-cov==2.12.1
+mypy==1.8.0
+setuptools==68.2.0
