Local testing final - last commit

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 minversion = 3.8.0
-envlist =  py39
+envlist =  mypy
 isolated_build = True
 
 [gh-actions]
 python = 
-    3.9: py39
+    3.9: py39; mypy
 
 [testenv]
 setenv =
