Local testing final - last commit

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 minversion = 3.8.0
-envlist =  mypy
+envlist =  mypy, py39
 isolated_build = True
 
 [gh-actions]
 python = 
-    3.9: py39; mypy
+    3.9: py39, mypy
 
 [testenv]
 setenv =
@@ -16,6 +16,7 @@ commands =
 ;    pytest --version
 ;    python -m pip list
     mypy src
+
     pytest -v --basetemp={envtmpdir}
 allowlist_externals = pytest
 
