--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,4 +63,4 @@ jobs:
           pip install pytest-cov
           pip install tox tox-gh-actions
       - name: Run tests with tox
-        run: tox
+        run: tox -e py39
