Local testing final - last commit

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {envsitepackagesdir}:{toxinidir}
-deps =
-    -r{toxinidir}/requirements.txt
+;deps =
+;    -r{toxinidir}/requirements.txt
 commands =
 ;    pytest --version
 ;    python -m pip list
