--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,16 +45,16 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Cache requirements
-        id: cache-requirements
-        uses: actions/cache@v2
-        with:
-          path: |
-            .tox
-
-          key: ${{ runner.os }}-tox-${{ matrix.python-version }}-${{ hashFiles('requirements.txt', 'tox.ini') }}
-          restore-keys: |
-            ${{ runner.os }}-tox-${{ matrix.python-version }}-
+#      - name: Cache requirements
+#        id: cache-requirements
+#        uses: actions/cache@v2
+#        with:
+#          path: |
+#            .tox
+#
+#          key: ${{ runner.os }}-tox-${{ matrix.python-version }}-${{ hashFiles('requirements.txt', 'tox.ini') }}
+#          restore-keys: |
+#            ${{ runner.os }}-tox-${{ matrix.python-version }}-
 
       - name: Install dependencies
         run: |
