--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands =
     mypy src
 
     pytest -v --basetemp={envtmpdir}
-allowlist_externals = pytest
+allowlist_externals = pytest, mypy
 
 ; [testenv:flake8]
 ; basepython = python3.9
