--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 *.sqlite filter=lfs diff=lfs merge=lfs -text
 *.sqlite3 filter=lfs diff=lfs merge=lfs -text
 databases/crm1 filter=lfs diff=lfs merge=lfs -text
+path/to/legacy/databases/crm1 filter=lfs diff=lfs merge=lfs -text
+legacy/databases/crm1 filter=lfs diff=lfs merge=lfs -text
