--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,6 @@
 *.db filter=lfs diff=lfs merge=lfs -text
 *.sqlite filter=lfs diff=lfs merge=lfs -text
 *.sqlite3 filter=lfs diff=lfs merge=lfs -text
-databases/crm1 filter=lfs diff=lfs merge=lfs -text
+databases/* filter=lfs diff=lfs merge=lfs -text
+legacy/databases/* filter=lfs diff=lfs merge=lfs -text
 legacy/databases/crm1 filter=lfs diff=lfs merge=lfs -text
-path/to/legacy/databases/crm1 filter=lfs diff=lfs merge=lfs -text
