--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 matplotlib==3.6.3
+numpy==1.23.5
+openai==1.12.0
 pandas==2.2.0
 pandasql==0.7.3
 plotly==5.19.0
-pytest==8.0.0
-setuptools==65.5.1
-sqlvalidator==0.0.20
-numpy==1.23.5
-openai==1.12.0
 python-dotenv==1.0.1
 sqlvalidator==0.0.20
 streamlit==1.30.0
+tiktoken==0.6.0
