--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ openai==1.12.0
 pandas==2.2.0
 pandasql==0.7.3
 plotly==5.19.0
+plotly_resampler==0.9.2
 python-dotenv==1.0.1
 sqlvalidator==0.0.20
 streamlit==1.30.0
