--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {envsitepackagesdir}:{toxinidir}
+passenv =
+    OPENAI_API_KEY
 ;deps =
 ;    -r{toxinidir}/requirements.txt
 commands =
