--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 databases/* filter=lfs diff=lfs merge=lfs -text
 legacy/databases/* filter=lfs diff=lfs merge=lfs -text
 legacy/databases/crm1 filter=lfs diff=lfs merge=lfs -text
+database/crm_refined.sqlite3 filter=lfs diff=lfs merge=lfs -text
