--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,6 @@ databases/* filter=lfs diff=lfs merge=lfs -text
 legacy/databases/* filter=lfs diff=lfs merge=lfs -text
 legacy/databases/crm1 filter=lfs diff=lfs merge=lfs -text
 database/crm_refined.sqlite3 filter=lfs diff=lfs merge=lfs -text
+uploads/crm_refined filter=lfs diff=lfs merge=lfs -text
+uploads/crm_refined.sqlite3.json filter=lfs diff=lfs merge=lfs -text
+uploads/crm_refined.sqlite3 filter=lfs diff=lfs merge=lfs -text
